# lottieda

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  pages.yml
docs/: astro.config.mjs  package.json
docs/src/pages/: changelog.astro  docs.astro  index.astro
docs/src/styles/: global.css
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs
src-tauri/src/lottie/: schema.rs
src/app/api/: animationCommands.ts
src/app/editor/: EditorCanvas.tsx
src/app/layers/: LayerPanel.tsx
src/app/preview/: LottiePreview.tsx
src/app/properties/: PropertyInspector.tsx
src/app/shelf/: ShelfPanel.tsx  primitives.ts
src/app/store/: editorStore.ts
src/app/timeline/: Timeline.tsx
src/app/toolbar/: FileActions.tsx  Toolbar.tsx
src/engine/: builder.ts  easing.ts  keyframes.ts  motion.ts  motionPresets.ts  schema.ts  validation.ts
src/importers/: svg.ts
src/renderer/: canvas.ts
