[package]
name = "lottieda"
version = "0.1.2"
description = "A native desktop editor for Lottie animations"
authors = ["LottieDa contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "lottieda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
